# storypy

./: .gitattributes  .readthedocs.yml  LICENSE  README.rst  pyproject.toml
docs/: requirements.txt
docs/source/: branding.rst  conf.py  guides.rst  index.rst  installation.rst  modules.rst
docs/source/_autosummary/: storypy.main.rst  storypy.rst
docs/source/_static/: logo.psd  stylesheet.css
src/storypy/: __init__.py  main.py
