[project]
name = "storypy"
version = "0.4.2"
authors = [
  { name="Andras Baki", email="andrasbaki6@googlemail.com" },
]
description = "A Python module for metaprogramming"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/storypy/storypy"
Issues = "https://github.com/storypy/storypy/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build

